--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm run build:tailwind",
+    "build:tailwind": "tailwindcss -i src/input.css -o src/output.css --minify",
+    "start:tailwind": "tailwindcss -i src/input.css -o src/output.css --watch",
+    "start": "npm run start:tailwind"
   },
   "repository": {
     "type": "git",
